# Sprechen-Sie-Attisch

./: .gitignore  .latexmkrc  README.md  SprechenSieAttisch-Antiqua.tex  SprechenSieAttisch-Fraktur.tex  SprechenSieAttisch-ja-1.tex  SprechenSieAttisch-ja-2.tex  SprechenSieAttisch.lyx  SprechenSieAttisch.tex  build.sh  grammar-ja.tex  grammar.tex  legend-ja.tex  legend.tex  lexicon.tex  lexicon.yaml  part-a.tex  part-a.yaml  part-b.tex  part-b.yaml  part-c.tex  part-c.yaml  part-d.tex  part-d.yaml  part-e.tex  part-e.yaml  part-f.tex  part-f.yaml  part-g.tex  part-g.yaml  part-h.tex  part-h.yaml  part-i.tex  part-i.yaml  preamble.tex  quotes.tex
convert-multilingual-doc/: README.md  convert-multilingual-doc.cabal  stack.yaml
convert-multilingual-doc/src/: Main.hs
convert-multilingual-doc/src/SprechenSieAttisch/: LaTeX.hs  Lexicon.hs  Part.hs  Prim.hs  SATySFi.hs
